<?xml version="1.0" encoding="utf-8"?>

<com.hlab.animatedPullToRefresh.AnimatedPullToRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullToRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:animationSpeed="fast"
    android:background="@color/loading"
    app:headerText="@string/loading"
    app:headerLoopAnimIteration="1"
    app:headerLoopAnimation="zoom"
    app:headerTextColor="@color/whiteColor"
    app:headerTextAnimIteration="1"
    app:headerTextAnimation="rotateCW"
    app:headerTextColorAnimationEnabled="true"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
       >
        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

            <TextView
                android:id="@+id/nowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:shadowColor="@color/dark_gray"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/NowPlaying"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/similarDiscrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:dsv_orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nowPlaying" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/spin_kit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_scale="0.5"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/PopRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:stackFromEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Popular" />

            <TextView
                android:id="@+id/Popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/popularMovie"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similarDiscrete" />

        <FrameLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

            <TextView
                android:id="@+id/txtTVShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:shadowColor="#00000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/trending_tv_shows"
                android:textColor="@color/whiteColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PopRecView" />

        <com.yarolegovich.discretescrollview.DiscreteScrollView
            android:id="@+id/Trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTVShow"
            app:dsv_orientation="horizontal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</com.hlab.animatedPullToRefresh.AnimatedPullToRefreshLayout>
